--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
@@ -27,6 +27,13 @@
             android:text="TextView" />
 
         <TextView
+            android:id="@+id/timeBomb"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
             android:id="@+id/timer"
             android:layout_width="73dp"
             android:layout_height="34dp"
